--- a/getdata.html
+++ b/getdata.html
@@ -9,7 +9,7 @@
     <h2>Enter the SchoolID assigned to the student to retrieve his/her data from database.</h2>
     <br />
     <input id="studentid" type="text"/>
-    <input type="button" id="buttonx" value="Submit" onclick="test()" />
+    <input type="button" id="buttonx" value="Submit" onclick="getdata()" />
     <br />
     <br />
     <br />
@@ -19,12 +19,12 @@
     <br /><br /><b><code>/==> Developed by Muhammad Asim Abbas (Xcieo) <==\</code></b>
     <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.0.min.js"></script>
     <script>
-        function test() {
+        function getdata() {
             var stud_id = $("#studentid").val();
             $.ajax({
                 type : "POST", url: "process.php", data: { student_id: stud_id }, success: function(result) {
-                    doit(result);
-                }, error: function (xhr) { alert(xhr.status); }
+                    outSearchResult(result);
+                }, error: function (xhr) { if(xhr.status==404)alert("Check your Internet Connection"); }
             });
         }
         
@@ -49,7 +49,7 @@
             if(check(text))
                 data += final_output;
         }
-        function doit(result) {
+        function outSearchResult(result) {
             
             var x;
             x = $.parseJSON(result);
@@ -78,7 +78,7 @@
                 data = "<br /><br /><table>";
             }
             else{
-                $("#iop").append("<br /><br /><b>No Student having id "+x.ID+" was found.</b>");
+                $("#iop").append("<br /><br /><b>No Student having id " + x.ID + " was found.</b><br /><br />");
             }
         }
 
